--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,14 +37,14 @@ dependencies:
   cupertino_icons: ^1.0.2
   shared_preferences: ^2.0.12
   nb_utils: ^6.1.0
-  google_fonts: ^6.1.0
+  google_fonts: ^5.0.0
   font_awesome_flutter: ^10.1.0
   flutter_feather_icons: ^2.0.0+1
   bottom_bar: ^2.0.1
   material_design_icons_flutter: ^7.0.7296
-  syncfusion_flutter_charts: ^24.2.8
+  syncfusion_flutter_charts: ^25.2.4
   country_code_picker: ^3.0.0
-  file_picker: ^6.1.1
+  file_picker: ^8.0.0+1
   carousel_slider: ^4.1.1
   timeline_tile: ^2.0.0
   shimmer: ^3.0.0
@@ -65,7 +65,7 @@ dependencies:
   dropdown_button2: ^2.3.9
   geolocator: ^10.1.1
   geocoding: ^3.0.0
-  location: ^5.0.3
+  location: ^6.0.2
   google_maps_place_picker_mb: ^3.0.0
   permission_handler: ^11.0.1
   dio: ^4.0.6
